Renamed falsely named path. Fixed bug with the preview-svgs overflowing their bounds

--- a/src/styles/sidebar/Controls.scss
+++ b/src/styles/sidebar/Controls.scss
@@ -4,7 +4,7 @@
 #sidebar>#controls{
     position: relative;
     width: 100%;
-    height: 300px;
+    min-height: 300px;
     padding: .8rem;
     
     // Default element with an info-icon
