--- a/src/styles/sidebar/Preview.scss
+++ b/src/styles/sidebar/Preview.scss
@@ -112,6 +112,8 @@
     // Container for all tabs
     #tabs{
         flex-grow: 1;
+        position: relative;
+        width: 100%;
 
         &>*{
             height: 100%;
@@ -126,11 +128,24 @@
         
         #animationTab{
             padding: 5px;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             
             svg{
-                width:100%;
-                height:100%;
+                max-width: 100%;
+                max-height: 100%;
+                height: 100%;
                 user-select: none;
+            }
+        }
+
+        #analyticsTab{
+            p{
+                text-align: center;
             }
         }
     }
